--- a/toDoApp.html
+++ b/toDoApp.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="toDoApp.css">
 </head>
 <body>
 
-    
+    <div id="container">
+        <textarea name="" id="area" cols="30" rows="10"></textarea>
+        <button id="btn">btn</button>
+        <div id="output"></div>
+    </div>
+
+
+    <script src="toDoApp.js"></script>
     
 </body>
 </html>
