--- a/toDoApp.html
+++ b/toDoApp.html
@@ -12,6 +12,19 @@
 
     <div id="container">
         <textarea name="" id="area" cols="30" rows="10"></textarea>
+
+            <div id="radioButton">
+                <input type="radio" id="verdana" value="font1" name="radioBtn">
+                <label for="verdana">verdana</label>
+
+                <input type="radio" id="arial" value="font2" name="radioBtn">
+                <label for="arial">arial</label>
+
+                <input type="radio" id="cambria" value="font3" name="radioBtn">
+                <label for="cambria">cambria</label>
+            </div>
+
+                
         <button id="btn">btn</button>
         <div id="output"></div>
     </div>
