update file name

--- a/fontFamilyPicker.html
+++ b/fontFamilyPicker.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="toDoApp.css">
+    <link rel="stylesheet" href="fontFamilyPicker.css">
 </head>
 <body>
 
@@ -30,7 +30,7 @@
     </div>
 
 
-    <script src="toDoApp.js"></script>
+    <script src="fontFamilyPicker.js"></script>
     
 </body>
 </html>
