--- a/fontFamilyPicker.html
+++ b/fontFamilyPicker.html
@@ -11,7 +11,8 @@
 <body>
 
     <div id="container">
-        <textarea name="" id="area" cols="30" rows="10"></textarea>
+        
+        <textarea name="" id="area" cols="30" rows="10" placeholder="insert text"></textarea>
 
             <div id="radioButton">
                 <input type="radio" id="verdana" value="font1" name="radioBtn">
@@ -22,7 +23,21 @@
 
                 <input type="radio" id="cambria" value="font3" name="radioBtn">
                 <label for="cambria">cambria</label>
+
+                <input type="radio" id="impact" value="font4" name="radioBtn">
+                <label for="cambria">impact</label>
+
+                <input type="radio" id="geneva" value="font5" name="radioBtn">
+                <label for="cambria">geneva</label>
+
+                <input type="radio" id="tahoma" value="font6" name="radioBtn">
+                <label for="cambria">tahoma</label>
+
+                <input type="radio" id="georgia" value="font7" name="radioBtn">
+                <label for="cambria">georgia</label>
             </div>
+
+            <input type="range" min="12" max="32" id="font-size" />
 
                 
         <button id="btn">btn</button>
