--- a/fontFamilyPicker.html
+++ b/fontFamilyPicker.html
@@ -11,8 +11,10 @@
 <body>
 
     <div id="container">
+
+        <span>Insert the text and choose size and font</span>
         
-        <textarea name="" id="area" cols="30" rows="10" placeholder="insert text"></textarea>
+        <textarea name="" id="area" cols="30" rows="10" placeholder="insert text here..."></textarea>
 
             <div id="radioButton">
                 <input type="radio" id="verdana" value="font1" name="radioBtn">
@@ -26,14 +28,14 @@
 
                 <input type="radio" id="impact" value="font4" name="radioBtn">
                 <label for="cambria">impact</label>
-
+<!-- 
                 <input type="radio" id="geneva" value="font5" name="radioBtn">
-                <label for="cambria">geneva</label>
+                <label for="cambria">geneva</label> -->
 
-                <input type="radio" id="tahoma" value="font6" name="radioBtn">
+                <input type="radio" id="tahoma" value="font5" name="radioBtn">
                 <label for="cambria">tahoma</label>
 
-                <input type="radio" id="georgia" value="font7" name="radioBtn">
+                <input type="radio" id="georgia" value="font6" name="radioBtn">
                 <label for="cambria">georgia</label>
             </div>
 
