change to the button

--- a/fontFamilyPicker.html
+++ b/fontFamilyPicker.html
@@ -42,7 +42,7 @@
             <input type="range" min="12" max="32" id="font-size" />
 
                 
-        <button id="btn">btn</button>
+        <button id="btn">generate</button>
         <div id="output"></div>
     </div>
 
